--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,8 @@
-<nav style="margin-bottom: 20px;">
-    <a href="/" style="margin-right: 15px;">Home</a>
-    <a href="/game" style="margin-right: 15px;">Play Game</a>
-    <a href="/history">History</a>
-</nav>
-<hr>
+<header class="topbar">
+    <div class="logo">🎬 Higher-Lower</div>
+    <nav class="topbarNav">
+        <a href="/">Home</a>
+        <a href="/game">Play</a>
+        <a href="/history">History</a>
+    </nav>
+</header>
